--- a/css/style.css
+++ b/css/style.css
@@ -1426,6 +1426,7 @@ body.overflow-disabled {
   max-width: 15rem;
   width: 100%;
   grid-gap: 1rem;
+  margin-bottom: 5rem;
   display: none;
 }
 
